--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
     <string name="app_name">LMD</string>
+    <!-- Section titles -->
+    <string name="drawer_section_orders">ORDERS</string>
+    <!-- Drawer items -->
+    <string name="menu_general_pool">General Pool</string>
+    <string name="menu_my_orders">My Orders</string>
+    <string name="menu_order_history">Order History</string>
+    <string name="menu_notifications">Notifications</string>
+    <string name="menu_deliveries_log">Deliveries Log</string>
+    <string name="menu_settings">Settings</string>
+    <string name="menu_chat">Chat</string>
+    <string name="menu_logout">Logout</string>
 </resources>
