--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="menu_settings">Settings</string>
     <string name="menu_chat">Chat</string>
     <string name="menu_logout">Logout</string>
+    <string name="open_menu">Open menu</string>
 </resources>
