--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,19 @@
 <resources>
     <string name="app_name">LMD</string>
+
+    <string name="welcome_back">Welcome Back</string>
+    <string name="agentId">Agent ID</string>
+    <string name="username">Username</string>
+    <string name="password">Password</string>
+    <string name="password_placeholder">••••••••</string>
+    <string name="login">Login</string>
+    <string name="forgotPassword">Forgot Password?</string>
+    <string name="forgot_password">Forgot Password</string>
+    <string name="error_username_empty">Username is required</string>
+    <string name="error_username_invalid">Please enter a valid Username</string>
+    <string name="error_password_empty">Password is required</string>
+    <string name="error_password_invalid">Must have upper, lower, digit, symbol, and 8+ chars</string>
+    <string name="error_agent_id_invalid">Agent ID must be 14 digits</string>
+    <string name="msg_welcome">Welcome!</string>
+    <string name="error_invalid_credentials">Invalid credentials</string>
 </resources>
