VLA-1 general pool homepage with map

--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -30,7 +30,9 @@
     <string name="menu_chat">المحادثة</string>
     <string name="menu_logout">تسجيل الخروج</string>
     <string name="open_menu"> افتح القائمة</string>
-
+    <!-- General Pool -->
     <string name="search">ابحث...</string>
+    <string name="add_to_your_orders">+ أضف إلى طلباتك</string>
+
 
 </resources>
