--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,5 @@
 <resources>
     <string name="app_name">LMD</string>
-    <string name="search">Search...</string>
-
-
     <!-- Login screen-->
     <string name="welcome_back">Welcome Back</string>
     <string name="agentId">Agent ID</string>
@@ -31,4 +28,10 @@
     <string name="menu_chat">Chat</string>
     <string name="menu_logout">Logout</string>
     <string name="open_menu">Open menu</string>
+    <!-- General Pool -->
+    <string name="add_to_your_orders">+ Add to your orders</string>
+    <string name="search">Search...</string>
+
+
+
 </resources>
