--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,17 @@
     <string name="menu_chat">Chat</string>
     <string name="menu_logout">Logout</string>
     <string name="open_menu">Open menu</string>
+
+    <string name="my_orders_title">My Orders (%1$d)</string>
+    <string name="search_by_order_number">Search by Order Number</string>
+    <string name="order_details">Order Details</string>
+    <string name="call">Call</string>
+    <string name="retry">Retry</string>
+    <string name="no_active_orders">No active orders.</string>
+    <string name="no_matching_orders">No matching orders.</string>
+    <string name="unable_to_load_orders">Unable to load orders.</string>
+    <string name="distance_unavailable_gps">Distance unavailable — turn on GPS.</string>
+    <string name="distance_na">—</string>
+    <string name="confirm_order">Confirm Order</string>
+    <string name="pick_order">Pick Order</string>
 </resources>
