--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -31,7 +31,7 @@
     <string name="menu_logout">تسجيل الخروج</string>
     <string name="open_menu"> افتح القائمة</string>
     <!-- General Pool -->
-    <string name="search">ابحث...</string>
+    <string name="search">ابحث برقم الطلب أو اسم العميل</string>
     <string name="add_to_your_orders">+ أضف إلى طلباتك</string>
     <string name="location_access_request">يرجى السماح بالوصول إلى الموقع لتمكين تصفية المسافة</string>
     <string name="kilometer">كيلومتر</string>
