--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,7 +30,7 @@
     <string name="open_menu">Open menu</string>
     <!-- General Pool -->
     <string name="add_to_your_orders">+ Add to your orders</string>
-    <string name="search">Search...</string>
+    <string name="search">Search by order no. or customer name</string>
     <string name="location_access_request">Please allow location access to enable distance filtering</string>
     <string name="kilometer">Km</string>
 
