--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -22,6 +22,7 @@
     <string name="drawer_section_orders">الطلبات</string>
     <!-- Drawer items -->
     <string name="menu_general_pool">المخزن العام</string>
+    <string name="my_pool">مخزني</string>
     <string name="menu_my_orders">طلباتي</string>
     <string name="menu_order_history">سجل الطلبات</string>
     <string name="menu_notifications">الإشعارات</string>
@@ -31,10 +32,12 @@
     <string name="menu_logout">تسجيل الخروج</string>
     <string name="open_menu"> افتح القائمة</string>
     <!-- General Pool -->
-    <string name="search">ابحث برقم الطلب أو اسم العميل</string>
+    <string name="search_order_number_customer_name">ابحث برقم الطلب أو اسم العميل</string>
+    <string name="search_order_number">ابحث برقم الطلب</string>
     <string name="add_to_your_orders">+ أضف إلى طلباتك</string>
     <string name="location_access_request">يرجى السماح بالوصول إلى الموقع لتمكين تصفية المسافة</string>
     <string name="kilometer">كيلومتر</string>
+    <string name="loading_text">جاري التحميل...</string>
 
 
 
