VLA-11 notification list FCM Paging3 Deeplink Detekt ktlint Dark?Light Ar/eng Clean Architecture

--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -13,5 +13,6 @@
         <string name="menu_chat">المحادثة</string>
         <string name="menu_logout">تسجيل الخروج</string>
     <string name="open_menu"> افتح القائمة</string>
+    <string name="notification_title">اشعار</string>
 
 </resources>
