--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="menu_chat">Chat</string>
     <string name="menu_logout">Logout</string>
     <string name="open_menu">Open menu</string>
+    <string name="notification_title">Notification</string>
+
 </resources>
