--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -123,5 +123,18 @@
 
     <!-- عنوان افتراضي لـ FCM -->
     <string name="notification_title">الإشعارات</string>
+        <string name="back">رجوع</string>
 
+        <!-- Settings / Language -->
+        <string name="app_language_title">لغة التطبيق</string>
+        <string name="app_language_english">الإنجليزية</string>
+        <string name="app_language_arabic">العربية</string>
+        <string name="settings_app_language">لغة التطبيق</string>
+
+        <!-- Settings / Notifications -->
+        <string name="settings_notifications">الإشعارات</string>
+        <string name="every_x_days">كل %1$d يوم</string>
+        <string name="notif_every_15_days">كل 15 يوم</string>
+        <string name="notif_every_30_days">كل 30 يوم</string>
+        <string name="notif_every_90_days">كل 90 يوم</string>
 </resources>
