--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -168,4 +168,5 @@
         <string name="notif_every_15_days">كل 15 يوم</string>
         <string name="notif_every_30_days">كل 30 يوم</string>
         <string name="notif_every_90_days">كل 90 يوم</string>
+    <string name="no_data">لا توجد بيانات متاحة</string>
 </resources>
